force-app/main/default/objects/Account/fields/IFv2_ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ShortDescription__c</fullName>
    <description>This is used provide description.</description>
    <label>Short Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>