force-app/main/default/objects/Account/fields/IFv2_Specialisation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Specialisation__c</fullName>
    <label>Specialisation</label>
    <type>TextArea</type>
</CustomField>