force-app/main/default/objects/Account/fields/IFv2_StepName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_StepName__c</fullName>
    <description>Stores the step name of the Approval Process</description>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>