force-app/main/default/objects/Account/fields/IFv2_SupplierClassification__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SupplierClassification__c</fullName>
    <label>Supplier Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Freights</fullName>
            </value>
            <value>
                <fullName>China MAE</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>MGP India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>