force-app/main/default/objects/Account/fields/IFv2_TINNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TINNumber__c</fullName>
    <label>TIN Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>