force-app/main/default/objects/Account/fields/IFv2_ToDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ToDate__c</fullName>
    <description>Used in China Leave and Overtime Workflow</description>
    <inlineHelpText>Input is mandatory</inlineHelpText>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>