force-app/main/default/objects/Account/fields/IFv2_ToDate_Date__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ToDate_Date__c</fullName>
    <formula>DATEVALUE(IFv2_ToDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Date</label>
    <type>Date</type>
</CustomField>