force-app/main/default/objects/Account/fields/IFv2_ToPlace__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ToPlace__c</fullName>
    <label>To Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>