force-app/main/default/objects/Account/fields/IFv2_Total__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Total__c</fullName>
    <label>Total in TEUR</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>