force-app/main/default/objects/Account/fields/IFv2_TotalOThours__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TotalOThours__c</fullName>
    <label>Total OT hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>