force-app/main/default/objects/Account/fields/IFv2_ToTime_Time__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ToTime_Time__c</fullName>
    <formula>MID(TEXT(IFv2_ToDate__c + 0.3333), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Time</label>
    <type>Text</type>
</CustomField>