force-app/main/default/objects/Account/fields/IFv2_Training__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Training__c</fullName>
    <label>Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>