force-app/main/default/objects/Account/fields/IFv2_TrainingTrainingType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TrainingTrainingType__c</fullName>
    <label>Training (training type)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>