force-app/main/default/objects/Account/fields/IFv2_TransportationTools__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TransportationTools__c</fullName>
    <description>Used in China travel App</description>
    <label>Transportation Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Co. Car</fullName>
            </value>
            <value>
                <fullName>Private Car</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>