force-app/main/default/objects/Account/fields/IFv2_TransportationType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TransportationType__c</fullName>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>