force-app/main/default/objects/Account/fields/IFv2_TravelName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TravelName__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Name</label>
    <type>Text</type>
</CustomField>