force-app/main/default/objects/Account/fields/IFv2_TypeofPersonnelRequisition__c.field-meta.xml
<CustomField>
    <fullName>IFv2_TypeofPersonnelRequisition__c</fullName>
    <label>Type of Personnel Requisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent post</fullName>
            </value>
            <value>
                <fullName>Temporary post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>