force-app/main/default/objects/Account/fields/IFv2_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>IFv2_UnitofMeasure__c</fullName>
    <description>This field is used in APM workflow.</description>
    <label>Unit of Measure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>