force-app/main/default/objects/Account/fields/IFv2_Units__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Units__c</fullName>
    <label>Units</label>
    <length>15</length>
    <type>Text</type>
</CustomField>