force-app/main/default/objects/Account/fields/IFv2_Usage__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Usage__c</fullName>
    <label>Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>