force-app/main/default/objects/Account/fields/IFv2_Usage_Agreement_DVP__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Usage_Agreement_DVP__c</fullName>
    <formula>&apos;This application applies for security class confidentially: C-SC1, availability: A-SC2, integrity: I-SC3 (see Security Class Guidance). Archiving period: 15 years (starts 6 month after the request is closed). Attachments in the workflow are not encrypted.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Agreement</label>
    <type>Text</type>
</CustomField>