force-app/main/default/objects/Account/fields/IFv2_UsageAgreement__c.field-meta.xml
<CustomField>
    <fullName>IFv2_UsageAgreement__c</fullName>
    <description>Used in General Approval Form workflow</description>
    <formula>&apos;This application applies for security class confidentially: C-SC1, availability: A-SC1, integrity: I-SC1 (see Security Class Guidance). It is not allowed to use this application for processes which contain security class (confidentiality, availability, integrity) SC2 and SC3. Archiving period: 15 years (starts 6 month after the request is closed). Attachments in the workflow are not encrypted.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Agreement</label>
    <type>Text</type>
</CustomField>