force-app/main/default/objects/Account/fields/IFv2_UsedMonthatPlannedDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_UsedMonthatPlannedDate__c</fullName>
    <label>Used Month at Planned Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>