force-app/main/default/objects/Account/fields/IFv2_UsefulLifeMonths__c.field-meta.xml
<CustomField>
    <fullName>IFv2_UsefulLifeMonths__c</fullName>
    <label>Useful Life (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>