force-app/main/default/objects/Account/fields/IFv2_Validity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Validity__c</fullName>
    <description>Used in Concession workflow</description>
    <formula>&quot;Extending the time or quantity is not permissible. Date Concession is valid starting will be updated after approval by Quality representive with date of approval&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validity</label>
    <type>Text</type>
</CustomField>