force-app/main/default/objects/Account/fields/IFv2_VATTaxRate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_VATTaxRate__c</fullName>
    <label>VAT Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>