force-app/main/default/objects/Account/fields/IFv2_WBSElement__c.field-meta.xml
<CustomField>
    <fullName>IFv2_WBSElement__c</fullName>
    <label>WBS Element</label>
    <length>24</length>
    <type>Text</type>
</CustomField>