force-app/main/default/objects/Account/fields/IFv2_WeeklyworkingTime__c.field-meta.xml
<CustomField>
    <fullName>IFv2_WeeklyworkingTime__c</fullName>
    <label>Weekly working time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>