force-app/main/default/objects/Account/fields/IFv2_Workflow__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Workflow__c</fullName>
    <description>The workflow name of the Request object</description>
    <label>Workflow</label>
    <length>250</length>
    <type>Text</type>
</CustomField>