force-app/main/default/objects/Account/fields/IFv2_WorkflowKey__c.field-meta.xml
<CustomField>
    <fullName>IFv2_WorkflowKey__c</fullName>
    <label>Workflow Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>