force-app/main/default/objects/Account/fields/IFv2_WorkflowNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_WorkflowNumber__c</fullName>
    <description>Used in APM Workflows</description>
    <inlineHelpText>SAP APM Workflow number</inlineHelpText>
    <label>Workflow Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>