force-app/main/default/objects/Account/fields/IFv2_WorkingdaysforParttime__c.field-meta.xml
<CustomField>
    <fullName>IFv2_WorkingdaysforParttime__c</fullName>
    <label>Working days for part-time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>