force-app/main/default/objects/Account/fields/IFv2_Yescustomerreferenceno__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Yescustomerreferenceno__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Concession workflow</description>
    <label>Yes, customer reference no</label>
    <type>Checkbox</type>
</CustomField>