force-app/main/default/objects/Account/recordTypes/IFv2_RequestExtension.recordType-meta.xml
<RecordType>
    <fullName>IFv2_RequestExtension</fullName>
    <active>true</active>
    <description>To be used for storing Request records where Account is an Extension Object for Insightflow 2.0</description>
    <label>Request Extension</label>
</RecordType>