force-app/main/default/objects/Account/recordTypes/IFv2_RequestItems.recordType-meta.xml
<RecordType>
    <fullName>IFv2_RequestItems</fullName>
    <active>true</active>
    <description>To be used for storing Request Items for Insightflow 2.0</description>
    <label>Request Items</label>
</RecordType>