force-app/main/default/objects/Account/validationRules/IFv2_SupplierClassificationValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>IFv2_SupplierClassificationValidation</fullName>
    <active>true</active>
    <description>This validation is to make the supplier classification field mandatory when the Account record type is Supplier</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Supplier&apos;, ISPICKVAL(IFv2_SupplierClassification__c,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>IFv2_SupplierClassification__c</errorDisplayField>
    <errorMessage>Please select the Suppler Classification.</errorMessage>
</ValidationRule>