force-app/main/default/objects/Account/validationRules/IFv2_ToDateBeforeFromDate.validationRule-meta.xml
<ValidationRule>
    <fullName>IFv2_ToDateBeforeFromDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR((IFv2_ToDate__c  &lt;  IFv2_FromDate__c), ( IFv2_ActClockOut__c &lt;  IFv2_ActClockIn__c ))</errorConditionFormula>
    <errorMessage>To Date/Clock Out must be greater than From Date/Clock In</errorMessage>
</ValidationRule>